0.89.2
* Updated config page
* OTP login

0.89.1
* User user Authy ID on user update
* Software built with love
* Token verification
* SMS token

0.89
* dashboard config page working
* saving options
* removed need help link

0.85
* single pages in dashboard for configuration

0.84
* Hooked up events for user added and updated

0.83
* Added user attributes to package install

Ode to code :)